added body background colour

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
  body {
-  background: linear-gradient(to bottom,#fbc581);
+  background: #fbc581;
   display: flex;
   height: 100vh;
   margin: 0;
